--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-27 Joe Hunt
+Add Items on the Fly. Behavior Changed in FA24. Fixed.
+M	inventory/manage/items.php
+
 2017-10-26 Joe Hunt
 Fixed URL of Google exchange rate provider
 M	gl/includes/db/gl_db_rates.inc
