Removed sparse return line in hooks.inc https://github.com/FrontAccountingERP/FA/commit/5c2b576cebcb6bf59a23d4f49b7362003f8d1bf1 http://frontaccounting.com/punbb/viewtopic.php?id=7055

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-27 Janusz Dobrowolski
+Removed sparse return line in hooks.inc
+M	includes/hooks.inc
+
 2017-10-27 Joe Hunt
 Add Items on the Fly. Behavior Changed in FA24. Fixed.
 M	inventory/manage/items.php
