Fixed debtor_trans and supp_trans primary keys to allow multiply AR/AP accounts in journal transactions. https://github.com/FrontAccountingERP/FA/commit/5cd2769b439929e59a8a56da1f42ba5bdb582d09 http://frontaccounting.com/punbb/viewtopic.php?id=7061 http://frontaccounting.com/punbb/viewtopic.php?pid=29251#p29251 The `sql/alter2.4.sql` is already in order.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2017-10-27 Janusz Dobrowolski
+Fixed debtor_trans and supp_trans primary keys to allow multiply AR/AP accounts in journal transactions.
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
+2017-10-27 Janusz Dobrowolski
 Removed sparse return line in hooks.inc
 M	includes/hooks.inc
 
