On the fly F2 Customers and Suppliers popup selection fix https://github.com/FrontAccountingERP/FA/commit/ae3b2bb8305be80dfb1e4e89bd10a0395c7db5ba http://frontaccounting.com/punbb/viewtopic.php?pid=29289#p29289 Supplier deletion success notification added Display of the record id to be extended to all notifications where pertinent

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-10-29
+On the fly F2 Customers and Suppliers popup selection fix
+M	purchasing/manage/suppliers.php
+M	sales/manage/customers.php
+
 2017-10-27 Janusz Dobrowolski
 Fixed debtor_trans and supp_trans primary keys to allow multiply AR/AP accounts in journal transactions.
 M	sql/en_US-demo.sql
