Items: fixed item tax type selector to exclude inactive item tax types. https://github.com/FrontAccountingERP/FA/commit/e6c89f21df1c1d6742a7e335e6e0fc2c958a7a29 http://frontaccounting.com/punbb/viewtopic.php?id=7081 http://frontaccounting.com/punbb/viewtopic.php?pid=29292#p29292 Added missing images for standard demo sql items in FA24Mods

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
-2017-10-29
+2017-10-29 Janusz Dobrowolski
+Items: fixed item tax type selector to exclude inactive item tax types.
+M	includes/ui/ui_lists.inc
+M	inventory/manage/items.php
+M	taxes/db/item_tax_types_db.inc
+
+2017-10-29 Joe Hunt
 On the fly F2 Customers and Suppliers popup selection fix
 M	purchasing/manage/suppliers.php
 M	sales/manage/customers.php
