Voiding cleanup - success message display added https://github.com/FrontAccountingERP/FA/commit/ed971474618d1bf986a797d54e487642430433bb http://frontaccounting.com/punbb/viewtopic.php?pid=29326#p29326

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-10-31 Joe Hunt
+Voiding cleanup - success message display added
+M	admin/void_transaction.php
+
 2017-10-29 Janusz Dobrowolski
 Items: fixed item tax type selector to exclude inactive item tax types.
 M	includes/ui/ui_lists.inc
