Set NOT NULL on debtor_trans/supp_trans primary key fields. https://github.com/FrontAccountingERP/FA/commit/5b41093323d7b0c106fa5fa1a4e0224f3b331f12 This is consequent on their becoming part of the PRIMARY KEY in a recent commit.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-10-31 Janusz Dobrowolski
+Set NOT NULL on debtor_trans/supp_trans primary key fields.
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2017-10-31 Joe Hunt
 Voiding cleanup - success message display added
 M	admin/void_transaction.php
