--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-10-31 Joe Hunt
+Fixed Tax Report on Screen.
+M	gl/includes/db/gl_db_trans.inc
+M	gl/inquiry/tax_inquiry.php
+
 2017-10-31 Janusz Dobrowolski
 Change on debtor_trans/supp_trans keys added in 2.4/2.4rc upgrade scripts
 M	sql/alter2.4.sql
