--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-11-01 Joe Hunt
+Fixing bug in Customer Inquiry and Supplier Inquiry
+M	purchasing/inquiry/supplier_inquiry.php
+M	sales/inquiry/customer_inquiry.php
+
 2017-10-31 Joe Hunt
 Fixed Tax Report on Screen.
 M	gl/includes/db/gl_db_trans.inc
