Wrong colspan in supplier credit note. Fixed. https://github.com/FrontAccountingERP/FA/commit/3862c1a48d8d699ff03d6fe31ee7b4cf492aa5e0 http://frontaccounting.com/punbb/viewtopic.php?id=7086

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-11-01 Joe Hunt
+Wrong colspan in supplier credit note. Fixed.
+M	purchasing/includes/ui/invoice_ui.inc
+
+2017-11-01 Joe Hunt
 Fixing bug in Customer Inquiry and Supplier Inquiry
 M	purchasing/inquiry/supplier_inquiry.php
 M	sales/inquiry/customer_inquiry.php
