--- a/FA24Mods/install/lang/ta_IN/LC_MESSAGES/ta_IN.po
+++ b/FA24Mods/install/lang/ta_IN/LC_MESSAGES/ta_IN.po
@@ -9,9 +9,9 @@ msgstr ""
 "Project-Id-Version: FrontAccounting 2.4 Install Wizard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-27 20:22+0200\n"
-"PO-Revision-Date: 2017-11-06 13:40+0530\n"
+"PO-Revision-Date: 2017-11-06 16:59+0530\n"
 "Last-Translator: Ap.Muthu <apmuthu@usa.net>, 2017\n"
-"Language-Team: Tamil (https://www.transifex.com/gnuacademy/teams/55037/ta/)\n"
+"Language-Team: Tamil (India) (https://www.transifex.com/gnuacademy/teams/55037/ta_IN/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
