Default Credit Limit changed to price format. https://github.com/FrontAccountingERP/FA/commit/b359f536c776828082fe16b4587edff08a75d089 http://frontaccounting.com/punbb/viewtopic.php?id=7090

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-11-07 Joe Hunt
+Default Credit Limit changed to price format.
+M	admin/gl_setup.php
+
 2017-11-01 Joe Hunt
 Wrong colspan in supplier credit note. Fixed.
 M	purchasing/includes/ui/invoice_ui.inc
