Top manufactured dashboard shows wrong statistics. Fixed with rerun. https://github.com/FrontAccountingERP/FA/commit/f8219593c85e1020093b93972386fd477675504f http://frontaccounting.com/punbb/viewtopic.php?id=7105

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-11-07 Joe Hunt
+Top manufactured dashboard shows wrong statistics. Fixed
+M	includes/dashboard.inc
+
+2017-11-07 Joe Hunt
 Default Credit Limit changed to price format.
 M	admin/gl_setup.php
 
