--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,58 @@
+2017-11-09 Janusz Dobrowolski
+PHP7 compatibility fixes for class constructors
+M	admin/includes/fa_patch.class.inc
+M	applications/application.php
+M	applications/customers.php
+M	applications/dimensions.php
+M	applications/fixed_assets.php
+M	applications/generalledger.php
+M	applications/inventory.php
+M	applications/manufacturing.php
+M	applications/setup.php
+M	applications/suppliers.php
+M	frontaccounting.php
+M	includes/JsHttpRequest.php
+M	includes/ajax.inc
+M	includes/archive.inc
+M	includes/current_user.inc
+M	includes/db/class.data_set.inc
+M	includes/db/class.reflines_db.inc
+M	includes/db_pager.inc
+M	includes/lang/language.inc
+M	includes/packages.inc
+M	includes/prefs/sysprefs.inc
+M	includes/prefs/userprefs.inc
+M	includes/references.inc
+M	includes/ui/allocation_cart.inc
+M	includes/ui/class.crud_view.inc
+M	includes/ui/class.reflines_crud.inc
+M	includes/ui/contacts_view.inc
+M	includes/ui/items_cart.inc
+M	includes/ui/simple_crud_class.inc
+M	purchasing/includes/po_class.inc
+M	purchasing/includes/supp_trans_class.inc
+M	reporting/includes/Workbook.php
+M	reporting/includes/barcodes.php
+M	reporting/includes/class.graphic.inc
+M	reporting/includes/class.mail.inc
+M	reporting/includes/class.pdf.inc
+M	reporting/includes/excel_report.inc
+M	reporting/includes/fpdi/decoders/ASCII85Decode.php
+M	reporting/includes/fpdi/decoders/LZWDecode.php
+M	reporting/includes/fpdi/fpdi_pdf_parser.php
+M	reporting/includes/fpdi/pdf_context.php
+M	reporting/includes/fpdi/pdf_parser.php
+M	reporting/includes/pdf_report.inc
+M	reporting/includes/printer_class.inc
+M	reporting/includes/reports_classes.inc
+M	reporting/includes/tcpdf.php
+M	sales/includes/cart_class.inc
+M	sql/alter2.1.php
+M	sql/alter2.2.php
+M	sql/alter2.3.php
+M	sql/alter2.4.php
+M	sql/alter2.4rc1.php
+
 2017-11-07 Joe Hunt
 Top manufactured dashboard shows wrong statistics. Fixed
 M	includes/dashboard.inc
