Fixed memory limit during database export. https://github.com/FrontAccountingERP/FA/commit/ca4b0e00f434d0180fe3e3ec9fa3d31a278a9fef

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-11-09 Janusz Dobrowolski
+Fixed memory limit during database export.
+M	 admin/db/maintenance_db.inc
+
+2017-11-09 Janusz Dobrowolski
 Session Exception error handler fix
 M	includes/errors.inc
 M	includes/session.inc
