--- a/FA24Mods/install/lang/ar_EG/LC_MESSAGES/ar_EG.po
+++ b/FA24Mods/install/lang/ar_EG/LC_MESSAGES/ar_EG.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: FrontAccounting 2.4 Install Wizard\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-07-27 20:22+0200\n"
-"PO-Revision-Date: 2017-07-31 07:30+0400\n"
-"Last-Translator: infotechaccountants.com <hameed@infotechaccountants.com>, 2017\n"
+"PO-Revision-Date: 2017-11-10 20:08+0530\n"
+"Last-Translator: Ap.Muthu <apmuthu@usa.net>, 2017\n"
 "Language-Team: Arabic (Egypt) (https://www.transifex.com/gnuacademy/teams/55037/ar_EG/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -517,7 +517,7 @@ msgstr "موافق"
 #: includes/packages.inc:189
 #, php-format
 msgid "No key field '%s' in file '%s'"
-msgstr ""
+msgstr "لا يوجد حقل رئيسي '%s' في الملف '%s'"
 
 #: includes/packages.inc:294
 msgid "Cannot download repo index file."
@@ -526,7 +526,7 @@ msgstr "يتعذر تنزيل ملف فهرس إعادة الشراء."
 #: includes/packages.inc:306 includes/packages.inc:343
 #, php-format
 msgid "Cannot delete outdated '%s' file."
-msgstr ""
+msgstr "يتعذر تنزيل الملف '%s'."
 
 #: includes/packages.inc:310
 msgid "Release file in repository is invalid, or public key is outdated."
@@ -539,7 +539,7 @@ msgstr "نسخة مستودع لا يطابق إصدار التطبيق."
 #: includes/packages.inc:335 includes/packages.inc:377
 #, php-format
 msgid "Cannot download '%s' file."
-msgstr ""
+msgstr "يتعذر تنزيل الملف '%s'."
 
 #: includes/packages.inc:347
 #, php-format
@@ -547,6 +547,8 @@ msgid ""
 "Security alert: broken index file in repository '%s'. Please inform "
 "repository administrator about this issue."
 msgstr ""
+"ت نبيه الأمان: ملف الفهرس المكسور في المستودع'%s'. الرجاء إعلام مسؤول مستودع"
+" التخزين عن هذه المشكلة."
 
 #: includes/packages.inc:383
 #, php-format
@@ -554,11 +556,13 @@ msgid ""
 "Security alert: broken package '%s' in repository. Please inform repository "
 "administrator about this issue."
 msgstr ""
+"تنبيه الأمن: حزمة مكسورة '%s' في مستودع. الرجاء إعلام مسؤول مستودع التخزين "
+"عن هذه المشكلة."
 
 #: includes/packages.inc:641 includes/packages.inc:696
 #, php-format
 msgid "Package '%s' not found."
-msgstr ""
+msgstr "لم يتم العثور على الحزمة '%s'."
 
 #: install/index.php:364
 msgid "Set Only Port value if you cannot use the default port 3306."
