--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-11-13 Joe Hunt
+White screen on Supplier Invoices and Supplier Credit Notes. Fixed.
+M	purchasing/supplier_credit.php
+M	purchasing/supplier_invoice.php
+
 2017-11-10 Joe Hunt
 Bug in php 7.1 when using $go_debug>0 in config.php. Only a warning. Work around.
 M	includes/current_user.inc
