--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,9 @@
+2017-11-16 Joe Hunt
+0004082: Missing file errors and fix
+M	includes/current_user.inc
+M	includes/hooks.inc
+M	includes/session.inc 
+
 2017-11-13 Joe Hunt
 White screen on Supplier Invoices and Supplier Credit Notes. Fixed.
 M	purchasing/supplier_credit.php
