--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-11-17 Janusz Dobrowolski
+Fixed rounding differences in sales delivery and invoice.
+M	sales/includes/db/sales_delivery_db.inc
+
 2017-11-16 Joe Hunt
 0004082: Missing file errors and fix
 M	includes/current_user.inc
