Sort Chart of Accounts by name. Fixed. https://github.com/FrontAccountingERP/FA/commit/4a69b00fd33fac15b82e68ef3e6a5cdae8bd6088 http://frontaccounting.com/punbb/viewtopic.php?id=7134

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-11-19 Joe Hunt
+Sort Chart of Accounts by name. Fixed.
+M	admin/inst_chart.php
+
 2017-11-17 Janusz Dobrowolski
 Fixed rounding differences in sales delivery and invoice.
 M	sales/includes/db/sales_delivery_db.inc
