Moved barcode feature from FA24Mods to core as accepted by upstream https://github.com/FrontAccountingERP/FA/commit/0388050f6d4c6c7c9a9db06d2f31aa8879da69a8 https://github.com/FrontAccountingERP/FA/commit/f2b14f25ac2539890c9ce6fc490c8be80a935b9c http://frontaccounting.com/punbb/viewtopic.php?id=7138

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,13 @@
+2017-11-23 Joe Hunt
+New Company Setup 'Barcodes On Stock' to show barcodes on Rep303, rerun.
+M	admin/company_preferences.php
+M	inventory/manage/items.php
+M	reporting/includes/barcodes.php
+M	reporting/rep303.php
+M	sql/alter2.4.php
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2017-11-19 Joe Hunt
 Sort Chart of Accounts by name. Fixed.
 M	admin/inst_chart.php
