--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-11-23 Janusz Dobrowolski
+Fixed sales transaction rounding fix.
+M	sales/includes/db/sales_delivery_db.inc
+
 2017-11-23 Joe Hunt
 New Company Setup 'Barcodes On Stock' to show barcodes on Rep303, rerun.
 M	admin/company_preferences.php
