--- a/FA24Mods/install/lang/vi_VN/LC_MESSAGES/vi_VN.po
+++ b/FA24Mods/install/lang/vi_VN/LC_MESSAGES/vi_VN.po
@@ -11,9 +11,9 @@ msgstr ""
 "POT-Creation-Date: 2017-07-27 20:22+0200\n"
 "PO-Revision-Date: 2017-07-29 16:27+0530\n"
 "Last-Translator: Ap.Muthu <apmuthu@usa.net>, 2017\n"
-"Language-Team: Vietnamese (https://www.transifex.com/gnuacademy/teams/55037/vi/)\n"
+"Language-Team: Vietnamese (Viet Nam) (https://www.transifex.com/gnuacademy/teams/55037/vi_VN/)\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=ISO-8859-1\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: vi_VN\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
