--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-11-25 Joe Hunt
+Misleading on system diagnostics (MariaDB), fixed.
+M	includes/system_tests.inc
+
 2017-11-23 Janusz Dobrowolski
 Fixed sales transaction rounding fix.
 M	sales/includes/db/sales_delivery_db.inc
