Adapting to Google's error when getting exchange rates. Fixed. https://github.com/FrontAccountingERP/FA/commit/ff67198fa8d011c788e8fb6d6d726a1712b6597e http://frontaccounting.com/punbb/viewtopic.php?id=7150

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-11-27 Joe Hunt
+Adapting to Google's error when getting exchange rates. Fixed.
+M	gl/includes/db/gl_db_rates.inc
+
 2017-11-25 Joe Hunt
 Misleading on system diagnostics (MariaDB), fixed.
 M	includes/system_tests.inc
