Account Class/Group drill down added https://github.com/FrontAccountingERP/FA/commit/004760666ed0828f177b6055f91cf6f6ce905be2 http://frontaccounting.com/punbb/viewtopic.php?id=7151

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,11 @@
 2017-11-27 Joe Hunt
+Account Class/Group drill down added
+M	gl/manage/gl_account_classes.php
+M	gl/manage/gl_account_types.php
+M	gl/manage/gl_accounts.php
+M	includes/ui/ui_lists.inc
+
+2017-11-27 Joe Hunt
 Adapting to Google's error when getting exchange rates. Fixed.
 M	gl/includes/db/gl_db_rates.inc
 
