--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-06 Joe Hunt
+Rerun of System Checks for backwards PHP compatibility.
+M	includes/system_tests.inc
+
 2017-12-02 Janusz Dobrowolski
 Backups/Restore: fixed compressed backup view, fixed obsolete ajax indicator during download.
 M	admin/backups.php
