Google and Bloomberg Exchange Rate consolidated fixes https://github.com/FrontAccountingERP/FA/commit/0a7206e29bd406cfa6b889cf641dabf48ad52ac9 https://github.com/FrontAccountingERP/FA/commit/cf722328fb2370aab1991e129f4e09d6216258a6 http://frontaccounting.com/punbb/viewtopic.php?pid=29955#p29955 Yahoo Exchange Rate is broken due to upstream blockage http://frontaccounting.com/punbb/viewtopic.php?pid=29941#p29941 https://widget-yahoo.ofx.com

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-13 Joe Hunt
+Google and Bloomberg Exchange Rate consolidated fixes
+M	gl/includes/db/gl_db_rates.inc
+
 2017-12-09 Joe Hunt
 Inventory Valuation Report showing 0 (zero) on Unit Cost and decimal precision fix.
 M	includes/current_user.inc
