System Diagnostics: fixed set of standard theme directories. https://github.com/FrontAccountingERP/FA/commit/9eec230b546ec5827a9c2e16570240318107006e

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-14 Janusz Dobrowolski
+System Diagnostics: fixed set of standard theme directories.
+M	 includes/system_tests.inc
+
 2017-12-13 Joe Hunt
 Google and Bloomberg Exchange Rate consolidated fixes
 M	gl/includes/db/gl_db_rates.inc
