--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,6 +1,10 @@
+2017-12-15 Joe Hunt
+Installing third party extensions fixed
+M	includes/packages.inc
+
 2017-12-14 Janusz Dobrowolski
 System Diagnostics: fixed set of standard theme directories.
-M	 includes/system_tests.inc
+M	includes/system_tests.inc
 
 2017-12-13 Joe Hunt
 Google and Bloomberg Exchange Rate consolidated fixes
