New Report 310.php: Inventory Purchasing - Transaction based report https://github.com/FrontAccountingERP/FA/commit/8251cfa8dedaf1091e063989259db33f2f0f1a28 http://frontaccounting.com/punbb/viewtopic.php?id=7180

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2017-12-15 Joe Hunt
+New Report 310.php: Inventory Purchasing - Transaction based report
+M	reporting/rep310.php
+M	reporting/reports_main.php
+
+2017-12-15 Joe Hunt
 Installing third party extensions fixed
 M	includes/packages.inc
 
