Inventory purchasing transaction based report - space fix https://github.com/FrontAccountingERP/FA/commit/4f45af036e84e77b72dce1157829e00a758203b0 https://github.com/FrontAccountingERP/FA/commit/8251cfa8dedaf1091e063989259db33f2f0f1a28#r26336388

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-18 Joe Hunt
+Inventory purchasing transaction based report - space fix
+M	reporting/rep310.php
+
 2017-12-15 Joe Hunt
 New Report 310.php: Inventory Purchasing - Transaction based report
 M	reporting/rep310.php
