Installed Third Party extension version display https://github.com/FrontAccountingERP/FA/commit/b4f083ca955e8daee64702b6491d858dce0d2f90 http://frontaccounting.com/punbb/viewtopic.php?id=7199 http://frontaccounting.com/punbb/viewtopic.php?id=7185 http://frontaccounting.com/punbb/viewtopic.php?pid=8056#p8056 http://frontaccounting.com/punbb/viewtopic.php?pid=28373#p28373

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-19 Joe Hunt
+Installed Third Party extension version display
+M	admin/inst_module.php
+
 2017-12-18 Joe Hunt
 Inventory purchasing transaction based report - space fix
 M	reporting/rep310.php
