Stock Status display, Manufacturing Reports: fixed products on WO count. https://github.com/FrontAccountingERP/FA/commit/493bcbc97444447376832211e9babff793707c95

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2017-12-19 Janusz Dobrowolski
+Stock Status display, Manufacturing Reports: fixed products on WO count.
+M	includes/db/manufacturing_db.inc
+M	reporting/rep303.php
+
 2017-12-19 Joe Hunt
 Installed Third Party extension version display
 M	admin/inst_module.php
