Work Order - Entry, Additional Costs: fixed input data checks. https://github.com/FrontAccountingERP/FA/commit/baf08ffb019ab3d04264b2876a1c0f3e32365c29

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2017-12-19 Janusz Dobrowolski
+Work Order - Entry, Additional Costs: fixed input data checks.
+M	manufacturing/work_order_costs.php
+M	manufacturing/work_order_entry.php
+
+2017-12-19 Janusz Dobrowolski
 Stock Status display, Manufacturing Reports: fixed products on WO count.
 M	includes/db/manufacturing_db.inc
 M	reporting/rep303.php
