Produce Finished Items: document reference input order fixed. https://github.com/FrontAccountingERP/FA/commit/c9770b49bbfa0a5c85cc0a8a9622dbd3f55c5353

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-12-19 Janusz Dobrowolski
+Produce Finished Items: document reference input order fixed.
+M	manufacturing/work_order_add_finished.php
+
+2017-12-19 Janusz Dobrowolski
 Work Order - Entry, Additional Costs: fixed input data checks.
 M	manufacturing/work_order_costs.php
 M	manufacturing/work_order_entry.php
