Added VARLIB_PATH and VARLOG_PATH defines to simplify packaging. https://github.com/FrontAccountingERP/FA/commit/4a37a28c49bf900dcc370fd3f21186cedcd632c9
Note: This change in the config file will be needed to be taken into account in any direct deployment by inclusion into RestAPI and integration of FA with other applications for such defines.

`VARLOG_PATH` and `VARLIB_PATH` are defined in the `includes/session.inc` and `install/isession.inc` and will have to be similarly defined in the integration scripts.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,16 @@
 2017-12-19 Janusz Dobrowolski
+Added VARLIB_PATH and VARLOG_PATH defines to simplify packaging.
+M	admin/includes/fa_patch.class.inc
+M	admin/inst_upgrade.php
+M	admin/view/view_upgrade_log.php
+M	config.default.php
+M	gl/includes/db/gl_db_rates.inc
+M	includes/packages.inc
+M	includes/session.inc
+M	includes/system_tests.inc
+M	install/isession.inc
+
+2017-12-19 Janusz Dobrowolski
 Produce Finished Items: document reference input order fixed.
 M	manufacturing/work_order_add_finished.php
 
