Password field in installer changed to hide text. https://github.com/FrontAccountingERP/FA/commit/6ad3696e667dae724be6b85a10610df5889851fc

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-12-19 Janusz Dobrowolski
+Password field in installer changed to hide text.
+M	install/index.php
+
+2017-12-19 Janusz Dobrowolski
 Added VARLIB_PATH and VARLOG_PATH defines to simplify packaging.
 M	admin/includes/fa_patch.class.inc
 M	admin/inst_upgrade.php
