subledger_list shows inactive records in Journal Entry. Fixed. https://github.com/FrontAccountingERP/FA/commit/7e7db9763df89c4010903f960e7ac2f6c22ff654 http://frontaccounting.com/punbb/viewtopic.php?id=7205

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-21 Joe Hunt
+subledger_list shows inactive records in Journal Entry. Fixed.
+M	includes/ui/ui_lists.inc
+
 2017-12-19 Janusz Dobrowolski
 Password field in installer changed to hide text.
 M	install/index.php
