Better Company Logo alignment on Reports. https://github.com/FrontAccountingERP/FA/commit/1bded8f2ef7c8c5b88bf5a6347802712a31e01e3 Hardcoded 150 px max width proportionally computing height of logo on reports.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-22 Joe Hunt
+Better Company Logo alignment on Reports.
+M	reporting/includes/pdf_report.inc
+
 2017-12-21 Joe Hunt
 subledger_list shows inactive records in Journal Entry. Fixed.
 M	includes/ui/ui_lists.inc
