Card Session Error and Fix. https://github.com/FrontAccountingERP/FA/commit/93ce523d751fd5e943f1ce2257f5d7b20ee3d6c2 http://frontaccounting.com/punbb/viewtopic.php?id=7212

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-23 Joe Hunt
+Card Session Error and Fix.
+M	sales/includes/sales_ui.inc
+
 2017-12-22 Joe Hunt
 Better Company Logo alignment on Reports.
 M	reporting/includes/pdf_report.inc
