Sales Area list, added 'No Area Filter'. https://github.com/FrontAccountingERP/FA/commit/4a17a83f0c4236a2ea643fa72c84cefca4fd6c3a http://frontaccounting.com/punbb/viewtopic.php?pid=30238#p30238 Needed for: https://github.com/apmuthu/FA24extensions/commit/f5e56b762d39b9c3039485028b564adf3ef9bee2

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2017-12-23 Joe Hunt
+Sales Area list, added 'No Area Filter'.
+M	includes/ui/ui_lists.inc
+M	reporting/includes/reports_classes.inc
+
+2017-12-23 Joe Hunt
 Card Session Error and Fix.
 M	sales/includes/sales_ui.inc
 
