tax group can be null as argument https://github.com/FrontAccountingERP/FA/commit/2716b97dd7105057c7c3acd7dacf137eaba8ac72 http://frontaccounting.com/punbb/viewtopic.php?pid=30254#p30254 This allows the import_transactions extension to work like it did in FA 2.3 https://github.com/apmuthu/FA24extensions/commit/a7b7510b1d37ed62cd3cd11dd9da57d0167afc4a#diff-21faf20455e1f59df4ca335d3cb26e65

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2017-12-24 Joe Hunt
+tax group can be null as argument
+M	taxes/db/tax_groups_db.inc
+
 2017-12-23 Joe Hunt
 Sales Area list, added 'No Area Filter'.
 M	includes/ui/ui_lists.inc
