Extra default parameter added to meta_forward function. https://github.com/FrontAccountingERP/FA/commit/2baa77a87a08a392928eb0ea49dbd9242d961514 http://frontaccounting.com/punbb/viewtopic.php?pid=30262#p30262 The new $return argument is set to true if form submission has not yet been done and the form data is still needed like displaying a message dynamically without affecting the form being filled in.

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2017-12-24 Joe Hunt
+Extra default parameter added to meta_forward function.
+M	includes/ui/ui_controls.inc
+
+2017-12-24 Joe Hunt
 tax group can be null as argument
 M	taxes/db/tax_groups_db.inc
 
