Fixed a multipart form in backups. https://github.com/FrontAccountingERP/FA/commit/c1f7794c267b3af334843af0bb025144287f8829 http://frontaccounting.com/punbb/viewtopic.php?id=7228

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-01-05 Joe Hunt
+Fixed a multipart form in backups.
+M	admin/backups.php
+
 2017-12-24 Joe Hunt
 Extra default parameter added to meta_forward function.
 M	includes/ui/ui_controls.inc
