Fixed account auto-selection on Customer Payments page. https://github.com/FrontAccountingERP/FA/commit/2964f4b6a618414e433bc98145dd845541d9d7b7

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-01-13 Janusz Dobrowolski
+Fixed account auto-selection on Customer Payments page.
+M	sales/customer_payments.php
+
 2018-01-05 Joe Hunt
 Fixed a multipart form in backups.
 M	admin/backups.php
