--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-01-13 Joe Hunt
+Fixed printing sequences of Sales Invoices.
+M	reporting/rep107.php
+
 2018-01-13 Janusz Dobrowolski
 Fixed account auto-selection on Customer Payments page.
 M	sales/customer_payments.php
