Fixed bank account auto-selection in Customer Payments (continued). https://github.com/FrontAccountingERP/FA/commit/3148667b6bdaf9859ebbf1a8a9ce0e35591e38bd http://frontaccounting.com/punbb/viewtopic.php?id=7234

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-01-13 Janusz Dobrowolski
+Fixed bank account auto-selection in Customer Payments (continued).
+M	sales/customer_payments.php
+
 2018-01-13 Joe Hunt
 Fixed printing sequences of Sales Invoices.
 M	reporting/rep107.php
