Added deferred income account and prepayment terms in standard Charts https://github.com/FrontAccountingERP/FA/commit/06bb8867a88cb3d76227b9a7649960ee83cacd04 http://frontaccounting.com/punbb/viewtopic.php?id=7269

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-01-16 Janusz Dobrowolski
+Added deferred income account and prepayment terms in init sql files.
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+
 2018-01-15 Janusz Dobrowolski
 Refreshed year bump in standard Chart SQLs
 M	sql/en_US-demo.sql
