Fixed $sign bug in various reports https://github.com/FrontAccountingERP/FA/commit/009fd657bd77c44afcde1fc8b8a5b6dea92c3367 https://github.com/FrontAccountingERP/FA/commit/f31eca3e9d68d964324ebb7da93eccb38dff6484 http://frontaccounting.com/punbb/viewtopic.php?id=7272

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,10 @@
+2018-01-20 Joe Hunt
+Fixed $sign bug in various reports
+M	reporting/rep109.php
+M	reporting/rep110.php
+M	reporting/rep111.php
+M	reporting/rep209.php
+
 2018-01-16 Janusz Dobrowolski
 Added deferred income account and prepayment terms in init sql files.
 M	sql/en_US-demo.sql
