Sales Orders Status rep105.php Report now with Amounts and re-run https://github.com/FrontAccountingERP/FA/commit/73f247196745ed24e9258d2d8535c6630bc07a4e https://github.com/FrontAccountingERP/FA/commit/5b56b67cfe574ef2d836a038d98a79914ff7a7a7 http://frontaccounting.com/punbb/viewtopic.php?id=7290

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-01-30 Joe Hunt
+Sales Orders Status rep105.php Report now with Amounts and re-run
+M	reporting/rep105.php
+
 2018-01-20 Joe Hunt
 Fixed $sign bug in various reports
 M	reporting/rep109.php
