--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-02-04 Janusz Dobrowolski
+Void a Transaction: keeping date unchanged after transaction voiding to allow continuation on date.
+M	admin/void_transaction.php
+
 2018-01-30 Joe Hunt
 Sales Orders Status rep105.php Report now with Amounts and re-run
 M	reporting/rep105.php
