Sales Order Entry: initial item selector position to point to last ordered item https://github.com/FrontAccountingERP/FA/commit/42751ff1e05ac803548a07d412f4a173cd0e0450 https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-a2c9281f740d77e6f39f75422229305f https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-d1c070e4ea1cf3d03ccc3a947b71998b

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2018-02-04 Janusz Dobrowolski
+Sales Order Entry: initial item selector position points to last ordered item (seems to be more useful than always selecting first item in selector).
+M	sales/includes/db/sales_order_db.inc
+M	sales/includes/ui/sales_order_ui.inc
+
+2018-02-04 Janusz Dobrowolski
 Void a Transaction: keeping date unchanged after transaction voiding to allow continuation on date.
 M	admin/void_transaction.php
 
