--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
 2018-02-04 Janusz Dobrowolski
+Journal Edition: allow edit reconciliation status for bank related journals.
+M	gl/gl_journal.php
+M	gl/includes/db/gl_db_bank_trans.inc
+M	gl/includes/ui/gl_journal_ui.inc
+
+2018-02-04 Janusz Dobrowolski
 Sales Order Entry: initial item selector position points to last ordered item (seems to be more useful than always selecting first item in selector).
 M	sales/includes/db/sales_order_db.inc
 M	sales/includes/ui/sales_order_ui.inc
