--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2018-02-04 Janusz Dobrowolski
+GL Inquiry: search by memo, added journal edition link.
+M	gl/includes/db/gl_db_trans.inc
+M	gl/inquiry/gl_account_inquiry.php
+
+2018-02-04 Janusz Dobrowolski
 Journal Edition: allow edit reconciliation status for bank related journals.
 M	gl/gl_journal.php
 M	gl/includes/db/gl_db_bank_trans.inc
