Bank Payment: for selected supplier payment set supplier account dimensions. https://github.com/FrontAccountingERP/FA/commit/7735892d35bda5a3c4f47893dc44a5b2e89e0531 https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-2d03c753d24c55eeb3b79f45cc197156 https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-e1d9123a500439bade54af09dc2786a7 With some changes

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2018-02-04 Janusz Dobrowolski
+Bank Payment: for selected supplier payment set supplier account dimensions.
+M	gl/includes/ui/gl_bank_ui.inc
+M	purchasing/includes/db/suppliers_db.inc
+
+2018-02-04 Janusz Dobrowolski
 GL Inquiry: search by memo, added journal edition link.
 M	gl/includes/db/gl_db_trans.inc
 M	gl/inquiry/gl_account_inquiry.php
