Reconcile Bank Account: added memo display, added Reconcile All button. https://github.com/FrontAccountingERP/FA/commit/6e534728a5723289ddd80c1c79e0c67a69b10ad1 https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-9724edb5cf21ee839f12930ea782e5f8 - Retained `Reconcile`, Added `ReconcileAll` https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-b5b1ac798efbbf3655cbd4827fbfaf4e

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,9 @@
 2018-02-04 Janusz Dobrowolski
+Reconcile Bank Account: added memo display, added Reconcile All button.
+M	gl/bank_account_reconcile.php
+M	gl/includes/db/gl_db_bank_accounts.inc
+
+2018-02-04 Janusz Dobrowolski
 Bank Payment: for selected supplier payment set supplier account dimensions.
 M	gl/includes/ui/gl_bank_ui.inc
 M	purchasing/includes/db/suppliers_db.inc
