Added POS name in cash payment memo. https://github.com/FrontAccountingERP/FA/commit/f5a86be183c6023b189199c69ac409df1b7116df https://github.com/braathwaate/frontac24/commit/12f09b46cb85ccfd3b2c2e4c1a1d0dfe51a69cc7#diff-e6ad1d3a1b1d82f52aec6174bdd91ef5

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-02-04 Janusz Dobrowolski
+Added POS name in cash payment memo.
+M	sales/includes/db/sales_invoice_db.inc
+
+2018-02-04 Janusz Dobrowolski
 Reconcile Bank Account: added memo display, added Reconcile All button.
 M	gl/bank_account_reconcile.php
 M	gl/includes/db/gl_db_bank_accounts.inc
