Fixed fallback mode entry on non-js browsers. https://github.com/FrontAccountingERP/FA/commit/865874e288d822a4a7ba07ec7a16813a37786dc7

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-02-04 Janusz Dobrowolski
+Fixed fallback mode entry on non-js browsers.
+M	access/login.php
+
+2018-02-04 Janusz Dobrowolski
 Added POS name in cash payment memo.
 M	sales/includes/db/sales_invoice_db.inc
 
