--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-02-04 Joe Hunt
+Better check for fixed assets.
+M	fixed_assets/process_depreciation.php
+
 2018-02-04 Janusz Dobrowolski
 Fixed fallback mode entry on non-js browsers.
 M	access/login.php
