--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-02-06 Joe Hunt
+Fixed a minor bug in QOH in inventory Planning Report
+M	 reporting/rep302.php
+
 2018-02-04 Joe Hunt
 Better check for fixed assets.
 M	fixed_assets/process_depreciation.php
