--- a/FA24Mods/lang/en_US/LC_MESSAGES/en_US.po
+++ b/FA24Mods/lang/en_US/LC_MESSAGES/en_US.po
@@ -1,19 +1,29 @@
+# FrontAccounting 2.4
+# Copyright (C) 2007-2017 FrontAccounting, LLC.
+# This file is distributed under the same license as the FrontAccounting package.
+# Joe Hunt Consulting <joe@frontaccounting.com>, 2015.
+#
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: FrontAccounting\n"
+"Project-Id-Version: FrontAccounting 2.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2015-05-07 13:48+0200\n"
-"PO-Revision-Date: 2012-10-01 23:11+0100\n"
-"Last-Translator: Translation Team <info@frontaccounting.net>\n"
+"POT-Creation-Date: 2017-11-09 22:44+0100\n"
+"PO-Revision-Date: 2018-02-18 00:18-0600\n"
+"Last-Translator: Translation Team <info@frontaccounting.com>\n"
 "Language-Team: Translators <info@frontaccounting.com>\n"
-"Language: \n"
+"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: English\n"
-"X-Poedit-Country: UNITED STATES\n"
-"X-Poedit-SourceCharset: iso-8859-1\n"
-"X-Poedit-KeywordsList: _\n"
+
+#: includes/sysnames.inc:82
+msgid "Chequing Account"
+msgstr "Checking Account"
+
+#: includes/sysnames.inc:89
+msgid "Cheque"
+msgstr "Check"
 
 #: reporting/rep107.php:285 reporting/rep109.php:212 reporting/rep111.php:209
 msgid "TOTAL ORDER VAT INCL."
@@ -38,3 +48,4 @@ msgstr "Your Tax Id."
 #: reporting/includes/header2.inc:124
 msgid "Our VAT No."
 msgstr "Our Tax Id."
+
