Open Balance bug in rep101.php (Customers Balance) https://github.com/FrontAccountingERP/FA/commit/4a8ede2a4a236a46a63819af13487f4d499d7aed http://frontaccounting.com/punbb/viewtopic.php?id=7368

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-03-04 Joe Hunt
+Open Balance bug in rep101.php (Customers Balance)
+M	reporting/rep101.php
+
 2018-02-06 Joe Hunt
 Fixed a minor bug in QOH in inventory Planning Report
 M	 reporting/rep302.php
