Changed GL Inquiry to also include the Reference Number. https://github.com/FrontAccountingERP/FA/commit/fd70a44680d92dab4b7abdbe9903a40c9f20314b http://frontaccounting.com/punbb/viewtopic.php?pid=31051#p31051

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-03-08 Joe Hunt
+Changed GL Inquiry to also include the Reference Number.
+M	gl/inquiry/gl_account_inquiry.php
+
 2018-03-04 Joe Hunt
 Open Balance bug in rep101.php (Customers Balance)
 M	reporting/rep101.php
