Key files enabled for Ajax Inquiry https://github.com/FrontAccountingERP/FA/commit/9738f7d64641df18b688f0d03a3b62c93f40e0c7 http://frontaccounting.com/punbb/viewtopic.php?id=7385 Part of https://github.com/apmuthu/frontac24/pull/8

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-03-08 BraathWaate
+Key files enabled for Ajax Inquiry
+M	includes/ui/ui_view.inc
+M	js/inserts.js
+
 2018-03-08 Joe Hunt
 Changed GL Inquiry to also include the Reference Number.
 M	gl/inquiry/gl_account_inquiry.php
