--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-03-12 BraathWaate / Joe Hunt
+Reverted: Key files enabled for Ajax Inquiry
+M	includes/ui/ui_view.inc
+M	js/inserts.js
+
 2018-03-08 BraathWaate
 Key files enabled for Ajax Inquiry
 M	includes/ui/ui_view.inc
