Wrong error message in Save Items. https://github.com/FrontAccountingERP/FA/commit/99925cb37085cf4e4f3ec09db878b3cc0c0d41a0 http://frontaccounting.com/punbb/viewtopic.php?id=7361

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-03-14 Joe Hunt
+Wrong error message in Save Items.
+M	inventory/includes/db/items_db.inc
+
 2018-03-12 BraathWaate / Joe Hunt
 Reverted: Key files enabled for Ajax Inquiry
 M	includes/ui/ui_view.inc
