Ref. edit boxes has been extended to show 16 instead of 10 chars. https://sourceforge.net/p/frontaccounting/git/ci/5a2878388731db48df19d9dd7d6f3d8062ee348e/ http://frontaccounting.com/punbb/viewtopic.php?id=7403

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-03-16 Joe Hunt
+Ref. edit boxes has been extended to show 16 instead of 10 chars.
+M	includes/ui/ui_input.inc
+
 2018-03-14 Joe Hunt
 Wrong error message in Save Items.
 M	inventory/includes/db/items_db.inc
