Updated New Core Language Template empty.po https://github.com/FrontAccountingERP/FA/commit/a52a9148cfb7b2f2a048acb5726d98e6786f2b8d#diff-cd25a4c791215f6fb5e07e0cfaffb79b

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-03-17 Janusz Dobrowolski
+Updated New Core Language Template empty.po
+M	lang/new_language_template/LC_MESSAGES/empty.po 
+
 2018-03-16 Joe Hunt
 Ref. edit boxes has been extended to show 16 instead of 10 chars.
 M	includes/ui/ui_input.inc
