FA 2.4.4 https://github.com/FrontAccountingERP/FA/commit/de943e150d36f815a02d4996e532a5e4e7510bc8

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-03-17 Joe Hunt
+FA 2.4.4
+M	version.php
+
 2018-03-17 Janusz Dobrowolski
 Moved installed languages to core, updated others
 M	install/lang/ar_EG/LC_MESSAGES/ar_EG.mo
