Fixed the summation of the outstanding open balance in Customer Balance Report. https://github.com/FrontAccountingERP/FA/commit/23eaec5e4f4fa5d533d82e6d208135e25d13a2ee http://frontaccounting.com/punbb/viewtopic.php?pid=31305#p31305

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-04-02 Joe Hunt
+Fixed the summation of the outstanding open balance in Customer Balance Report.
+M	reporting/rep101.php
+
 2018-03-27 Joe Hunt
 Update Journal Entry SQL query fixed.
 M	gl/includes/db/gl_journal.inc
