report_classes.inc - Parameter must be an array fixed. https://github.com/FrontAccountingERP/FA/commit/aae35509fd8348f9e2c26ea923c8b2f3934dc793 http://frontaccounting.com/punbb/viewtopic.php?id=7448

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-04-09 Joe Hunt
+report_classes.inc - Parameter must be an array fixed.
+M	reporting/includes/reports_classes.inc
+
 2018-04-02 Joe Hunt
 Fixed the summation of the outstanding open balance in Customer Balance Report.
 M	reporting/rep101.php
