Fixed Session error in PHP 7.2. https://github.com/FrontAccountingERP/FA/commit/67b2242ddabe3734f4e923b45e172adcb1e11831 http://frontaccounting.com/punbb/viewtopic.php?id=7370

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-04-09 Joe Hunt
+Fixed Session error in PHP 7.2.
+M	includes/session.inc
+
+2018-04-09 Joe Hunt
 report_classes.inc - Parameter must be an array fixed.
 M	reporting/includes/reports_classes.inc
 
