--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,8 @@
+2018-04-16 Joe Hunt
+Auto Increase of Document References (company setup)
+M	admin/company_preferences.php
+M	sales/includes/cart_class.inc
+
 2018-04-09 Joe Hunt
 Fixed Session error in PHP 7.2.
 M	includes/session.inc
