--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,10 @@
 2018-04-16 Joe Hunt
+Standard Charts and upgrades for new sys_prefs flag ref_no_auto_increase
+M	sql/en_US-demo.sql
+M	sql/en_US-new.sql
+M	sql/alter2.4.php
+
+2018-04-16 Joe Hunt
 Auto Increase of Document References (company setup)
 M	admin/company_preferences.php
 M	sales/includes/cart_class.inc
