--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-04-18 Joe Hunt
+Typo in report Customer Detail Listing
+M	reporting/rep103.php
+
 2018-04-17 Janusz Dobrowolski
 Removed obsolete column 'Received' from direct purchase document entry forms.
 M	purchasing/includes/ui/po_ui.inc
