Fixed a php 7.2 bug in db_pager.inc. https://github.com/FrontAccountingERP/FA/commit/7b76d3bbbde9f30a1659a995d542b7c5a91f9fbf http://frontaccounting.com/punbb/viewtopic.php?id=7475

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-04-18 Joe Hunt
+Fixed a php 7.2 bug in db_pager.inc.
+M	includes/db_pager.inc
+
+2018-04-18 Joe Hunt
 Typo in report Customer Detail Listing
 M	reporting/rep103.php
 
