--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-04-29 Joe Hunt
+0004161: g/l inquiry person/item displays number instead of person & Rerun.
+M	gl/includes/db/gl_db_trans.inc
+
 2018-04-18 Joe Hunt
 Fixed a php 7.2 bug in db_pager.inc.
 M	includes/db_pager.inc
