Adding Attachments to Dimension https://github.com/FrontAccountingERP/FA/commit/37ce2eba59b4f5ca59540bcb45431471538670e4 http://frontaccounting.com/punbb/viewtopic.php?id=7503

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-05-09 Joe Hunt
+Adding Attachments to Dimension
+M	dimensions/dimension_entry.php
+
 2018-05-08 Joe Hunt
 The function get_customer_trans_details now includes itemPrice ex tax in SQL.
 M	sales/includes/db/cust_trans_details_db.inc
