Currency Convertor Google URL update https://github.com/FrontAccountingERP/FA/commit/3f9070f64c404bde1f55ecf4827658d27bdad815 https://github.com/FrontAccountingERP/FA/commit/d39276a5c8495014b0716c81c432fa9a86ffc138 http://frontaccounting.com/punbb/viewtopic.php?id=7530

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-05-25 Joe Hunt
+Currency Convertor Google URL update
+M	gl/includes/db/gl_db_rates.inc
+
 2018-05-09 Joe Hunt
 Adding Attachments to Dimension
 M	dimensions/dimension_entry.php
