0003317: "Forty" is misspelled on remittances, receipts. Fixed. https://github.com/FrontAccountingERP/FA/commit/ac703fc5a78726c48606a5678e402f72ab95d5d9

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,3 +1,7 @@
+2018-05-31 Joe Hunt
+0003317: "Forty" is misspelled on remittances, receipts. Fixed.
+M	includes/ui/ui_view.inc
+
 2018-05-25 Joe Hunt
 Currency Convertor Google URL update
 M	gl/includes/db/gl_db_rates.inc
