--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-05-31 Joe Hunt
+0004476: Our Order No is always 0 on customer payment receipt. Fixed by empty column.
+M	reporting/includes/doctext.inc
+
+2018-05-31 Joe Hunt
 0003317: "Forty" is misspelled on remittances, receipts. Fixed.
 M	includes/ui/ui_view.inc
 
