0004468: @braathwaate: Cannot modify a funds transfer twice. https://github.com/FrontAccountingERP/FA/commit/2ed9a14c68002e4394fb74a736cad6a2591d5e44

--- a/core/CHANGELOG.txt
+++ b/core/CHANGELOG.txt
@@ -1,4 +1,8 @@
 2018-05-31 Joe Hunt
+0004468: @braathwaate: Cannot modify a funds transfer twice.
+M	gl/includes/db/gl_db_banking.inc
+
+2018-05-31 Joe Hunt
 0004476: Our Order No is always 0 on customer payment receipt. Fixed by empty column.
 M	reporting/includes/doctext.inc
 
